@@ -2,7 +2,7 @@
 iDMC C library
 
 Adapted from iDMC, Copyright (C) 2004-2006 Marji Lines and Alfredo Medio
-Copyright (C) 2006,2007 Marji Lines and Alfredo Medio.
+Copyright (C) 2006,2007,2009 Marji Lines and Alfredo Medio.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -13,8 +13,6 @@ This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 General Public License for more details.
-
-Last modified: $Date$
 */
 #ifndef __gsl_rng_lualib__
 #define __gsl_rng_lualib__
@@ -27,7 +25,7 @@ extern "C" {
 #include <gsl/gsl_randist.h>
 #include <lua.h>
 
-void initGslRng(lua_State *L);
+int initGslRng(lua_State *L);
 void freeGslRng(lua_State *L);
 /*for retrieving and eventually manipulating RNG directly:*/
 gsl_rng* getGslRngState(lua_State *L);
