@@ -18,23 +18,26 @@ Last modified: $Date$
 */
 #include "gsl_rng_lualib.h"
 
-void initGslRng(lua_State *L) {
-	gsl_rng* rng_state = gsl_rng_alloc(gsl_rng_taus);
-	/*store in registry:*/
-	lua_pushstring(L, "gslRngState");  /* push address */
-	lua_pushlightuserdata(L, (void*)rng_state);  /* push value */
-	/* registry[&Key] = myNumber */
-	lua_settable(L, LUA_REGISTRYINDEX);
-	lua_register(L, "setSeed", setGslRngSeed);
-	lua_register(L, "runif", getGslRngRunif);
-	lua_register(L, "rnorm", getGslRngRnorm);
-	lua_register(L, "rpois", getGslRngRpois);
-	lua_register(L, "rlaplace", getGslRngLaplace);
-	lua_register(L, "rexponential", getGslRngExponential);
-	lua_register(L, "rbeta", getGslRngBeta);
-	lua_register(L, "rlognormal", getGslRngLognormal);
-	lua_register(L, "rlogistic", getGslRngLogistic);
-	lua_register(L, "rpareto", getGslRngLogistic);
+int initGslRng(lua_State *L) {
+  gsl_rng* rng_state = gsl_rng_alloc(gsl_rng_taus);
+  if(!rng_state)
+    return 1;
+  /*store in registry:*/
+  lua_pushstring(L, "gslRngState");  /* push address */
+  lua_pushlightuserdata(L, (void*)rng_state);  /* push value */
+  /* registry[&Key] = myNumber */
+  lua_settable(L, LUA_REGISTRYINDEX);
+  lua_register(L, "setSeed", setGslRngSeed);
+  lua_register(L, "runif", getGslRngRunif);
+  lua_register(L, "rnorm", getGslRngRnorm);
+  lua_register(L, "rpois", getGslRngRpois);
+  lua_register(L, "rlaplace", getGslRngLaplace);
+  lua_register(L, "rexponential", getGslRngExponential);
+  lua_register(L, "rbeta", getGslRngBeta);
+  lua_register(L, "rlognormal", getGslRngLognormal);
+  lua_register(L, "rlogistic", getGslRngLogistic);
+  lua_register(L, "rpareto", getGslRngLogistic);
+  return 0;
 }
 
 void freeGslRng(lua_State *L) {
